# docs/openapi/v1.0-api-contract.json
@@ -319,6 +319,50 @@
         ]
       }
     },
+    "/api/v1/buildings/{id}/unit-metadata": {
+      "get": {
+        "operationId": "BuildingController_listUnitMetadata_v1",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "page",
+            "required": true,
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "limit",
+            "required": true,
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "security": [
+          {
+            "bearer": []
+          }
+        ],
+        "tags": [
+          "building"
+        ]
+      }
+    },
     "/api/v1/buildings/{id}/units/{unitId}": {
       "get": {
         "operationId": "BuildingController_getUnit_v1",
